<package>
  <name>rs_robotvqa_msgs</name>
  <description> Ros messages for communication between RobotVQA and RoboSherlock
  </description>
  <version>0.0.1</version>
  <author email="fkenghag@cs.uni-bremen.de"> Franklin Kenghagho Kenfack </author>
  <maintainer email="fkenghag@cs.uni-bremen.de"> Franklin Kenghagho Kenfack </maintainer>
 
 <license>BSD2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>actionlib</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>shape_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
